<resources>
    <string name="app_name">Firebase_Authentication</string>
    <string name="kabaadwallah">KABAADWALLAH</string>
    <string name="create_new_account">Create New Account</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile</string>
    <string name="register">Register</string>
    <string name="already_registered_login_here">Already Registered ? Login Here</string>
    <string name="login">Login</string>
    <string name="login_here">Login Here</string>
    <string name="new_here_create_account">New Here ? Create Account</string>
</resources>